Completed all detailed Steps for the recipes

--- a/recipes/waffles.html
+++ b/recipes/waffles.html
@@ -25,6 +25,15 @@
     <p>Combine flour, salt, and baking powder in a small bowl and mix with a fork.</p>
     <p>In a large bowl, combine the oil/butter, eggs, vanilla, sugar and milk and mix until well combined and the sugar is dissolved.</p>
     <p>Then pour the dry ingredients into the wet and whisk just until the clumps are out. Over mixing will make the waffles chewy, so be careful. :)</p>
-    <p>(You can sift the flour in to make this easier, too!)</p>~`
+    <p>(You can sift the flour in to make this easier, too!)</p>
+    <h3>Step 3: Preheat the Waffle Iron + Figure Out How Much Batter to Use</h3>
+    <p>Preheat your waffle iron well before you start so the waffles cook evenly. This will vary a lot due to differences in waffle irons - but I typically do the medium/high setting.</p>
+    <p>Because this recipe has so much baking powder, the waffles will puff up quite a bit as they cook!</p>
+    <p>I recommend using slightly less than your waffle iron suggests - the <a href="https://www.amazon.com/gp/product/B001CHL3Q0/ref=as_li_tl?ie=UTF8&camp=1789&creative=390957&creativeASIN=B001CHL3Q0&linkCode=as2&tag=httpwwwinst0d-20&linkId=7T3XZ4UNN5EKQJ7H">Calphalon waffle iron</a> I'm using calls for 2 cups of batter, so 1 3/4+ cups of batter works pretty well!</p>
+    <p>Always better to try less batter at first and have some sad looking test waffles instead of a crazy overflowing foaming batter mess.</p>
+    <h3>Step 4: Cook!</h3>
+    <p>Pour the waffle batter evenly over the preheated plates and then close the waffle iron.</p>
+    <p>Cooking will typically take between 3-5 minutes - as soon as steam stops exploding out of the waffle iron they should be close to done! I never really listen to the waffle maker about whether they're done or not - it normally fibs. Just check them every so often - lift the lid and poke them a lot. :P </p>
+    <p>Keep on cooking until they're perfect for you and then EAT ALL THE WAFFLES.</p>
 </body>
 </html>
