--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/waffles.html">Waffles</a>
-    <a href="recipes/grilled_cheese_sandwitch.html">Grilled Cheese Sandwitch</a>
+    <ol>
+        <li><a href="recipes/waffles.html">Waffles</a></li>
+        <li><a href="recipes/grilled_cheese_sandwitch.html">Grilled Cheese Sandwitch</a></li>
+    </ol>
+    
+   
 </body>
 </html>
